--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,10 @@
   "author": "khaled anwar",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.3",
     "pg": "^8.11.3",
     "socket.io": "^4.7.4"
