--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.7.4",
     "sonner": "^1.4.1",
     "web-vitals": "^2.1.4"
   },
